--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -4,3 +4,4 @@ port = 587
 user = "ary.sham026@gmail.com"
 password = "fwva yinw rshw jlwi"   # use an App Password if using Gmail
 use_tls = true
+INIT_TOKEN = "09JpxouqhACq8mOM2wRfBESBerx4kz"
